🎨 Fixed layout
And background gradient not covering 100% of the screen on mobile

--- a/src/public_html/css/style.scss
+++ b/src/public_html/css/style.scss
@@ -11,8 +11,7 @@ body {
     background: linear-gradient(to bottom, rgba(#2196f3, .3), rgba(#1a237e, .5));
     background-size: cover;
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    top: 0; right: 0; bottom: 0; left:0;
 
     z-index: -100;
 }
